// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DoCtYpE html>
=====================================output=====================================
<!DoCtYpE html>

================================================================================
`;

exports[`xhtml-doctype.xhtml format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<script xmlns="http://www.w3.org/1999/xhtml" src="[...]"/>

=====================================output=====================================
<!DOCTYPE html>
<script xmlns="http://www.w3.org/1999/xhtml" src="[...]" />

================================================================================
`;
